Add custom wallpaper functionality

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <img src="wallpapers/dark3.jpg"onclick="setWallpaper(this.src)">
             <img src="wallpapers/dark4.jpg"onclick="setWallpaper(this.src)">
             <img src="wallpapers/blue1.jpg"onclick="setWallpaper(this.src)">
+            <img src="wallpapers/custom.png"onclick="setWallpaper(prompt('Enter the URL of the image'))">
         </div>
     </div>
     <div class="delete-popup-container" id="delete-popup">
